added db connection

--- a/src/config/config.prod.env
+++ b/src/config/config.prod.env
@@ -1,8 +1,12 @@
 
 # # PROD CRED ##
-
+NODE_ENV=prod
 PORT=8000
 DB_NAME=prod
 DB_URL=prod
+DB_USER=prod
+DB_PORT=prod
+DB_HOST=prod
 DB_PASSWORD=prod
+DB_DRIVER=postgres
 
