--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "backend-template",
   "version": "1.0.0",
-  "description": "backend setup",
+  "description": "the gaming hub backend",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && node build/server.js",
     "start": "nodemon ./src/server.ts",
-    "start:dev": "SET NODE_ENV=dev & nodemon --watch src/**/* -e ts,json --exec node --inspect -r ts-node/register ./src/server.ts",
+    "dev": "SET NODE_ENV=dev & nodemon --watch src/**/* -e ts,json --exec node --inspect -r ts-node/register ./src/server.ts",
     "start:prod": "SET NODE_ENV=prod & npm run build",
-    "dev":"",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "check-types": "tsc --pretty --noEmit",
@@ -20,38 +19,43 @@
     "prepare": "husky install"
   },
   "keywords": [
-    "backend",
-    "template"
+    "the gaming hub"
   ],
   "author": "Developer",
   "license": "ISC",
   "dependencies": {
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
     "@types/hpp": "^0.2.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-rate-limit": "^6.3.0",
     "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.17.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/pg": "^8.6.5",
+    "@types/sequelize": "^4.28.11",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.11.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
+    "husky": "^7.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.0",
     "ts-node": "^10.7.0",
-    "husky": "^7.0.0"
+    "typescript": "^4.6.3"
   }
 }
