--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,35 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+# /node_modules
+# /.pnp
+# .pnp.js
 
+node_modules
+
+package-lock.json
+uploads/
+
+config/config.env
+
+*env
 # testing
-/coverage
+# /coverage
 
-# production
-/build
+# # production
+# /build
 
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# # misc
+# .DS_Store
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
+# config/config.dev.env
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
+
+# *.env
