--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
     "format": "prettier --write .",
     "test-all": "npm run check-format && npm run check-lint && npm run check-types",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:format": "prisma format",
+    "prisma:generate": "prisma generate",
+    "prisma:generate:watch": "prisma generate --watch",
+    "prisma:studio": "npx prisma studio",
+    "prisma:reset": "prisma migrate reset",
+    "prisma:db-pull": "npx prisma db pull",
+    "prisma:db-push": "npx prisma db push"
   },
   "engines": {
     "node": "16.13.2"
@@ -29,6 +37,7 @@
   "author": "Developer",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.12.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/hpp": "^0.2.2",
@@ -60,6 +69,7 @@
     "husky": "^7.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.0",
+    "prisma": "^3.12.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
