--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
   "author": "Developer",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^3.12.0",
+    "@prisma/client": "^3.13.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/hpp": "^0.2.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
@@ -51,13 +52,17 @@
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
+    "nanoid": "^3.3.3",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.17.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.4",
     "@types/pg": "^8.6.5",
     "@types/sequelize": "^4.28.11",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
